dashboard/tool/src/webapp/css/dashboard.css
.tab{
    padding:5px;
}
.activeCell{
    -webkit-border-top-right-radius: 7px;
    -webkit-border-top-left-radius: 7px;
    -moz-border-radius-topright: 7px;
    -moz-border-radius-topleft: 7px;
     border-top-right-radius: 7px;
    border-top-left-radius: 7px;
    background: #ddd;
 
}
.activeCell, .results {
    margin-bottom:5px
}
.newRow .results {
    margin-top:-5px;
}


.results {
    -webkit-border-bottom-right-radius: 10px;
    -webkit-border-bottom-left-radius: 10px;
    -moz-border-radius-bottomright: 10px;
    -moz-border-radius-bottomleft: 10px;
    border-bottom-right-radius: 10px;
    border-bottom-left-radius: 10px;
    padding: 10px;
    margin-bottom: 5px;
    font-size: 100%;
    position:relative;
    border:1px solid #ddd;
    margin-top:-5px;
    background:#fff;
    width:97%;
    margin-top:0;
}

.results hr {
    border: none 0;
    border-top: 1px solid #aaa;
    width: 100%;
    height: 1px;
}
.results h4 {
    color:#555;
    font-size:110%;
    margin:0;
    padding:0 0 10px 0;
}

.results .block {
    margin:10px 0;
}    
h3.withNav, #motdTextDiv h3, #motdTextDiv h4{
    margin:1em 0;
    color:#555;
    font-size:16px;
}

.pagerCell {
    position: absolute;
    right: 3px;
    top: 63px;
}

.pagerCell .pager {
    width:100%;
    color: #aaa;
    text-align: right;
    margin:0;
}
.itemCount{
    font-size:80%
}
.itemCount+span.pager{
    padding-left:20px;
}
.pager > a, .pager > span {
    padding: 0 5px;
    text-align: center;
    margin: 2px;
    border: 1px solid #ccc;
    -moz-border-radius: 4px;
    background:#fff;
    border-radius: 4px;
}

.pager > span.linky, .pager > a {
    background: #eee;
    color: #666
}

.pager > span.linky:hover, .pager > a:hover {
    border: 1px solid #555;
    background: #333;
    color: #fff;
}

.pager > span.linky:hover a {
    color: #fff;
}

.pager a {
    text-decoration: none;
}

.actionPanelTrig {
    text-align: right;
    width:17px;
    float:right;
}

.actionPanelTrig a {
    display: block;
    width: 16px;
    height: 16px;
    background: transparent url(img/down.png) right top no-repeat;
}

.actionPanel {
    list-style: none;
    margin: 0;
    padding: 0;
    border: 1px solid #aaa;
    background: #ffe;
    font-size: 90%;
    font-weight:normal;
    z-index:10
}
.actionPanel li {
    margin: 0;
    padding: 0;
}

.actionPanel li a, .actionPanel li a:visited {
    display: block;
    color:#000;
    text-decoration: none;
    padding: 5px;
}

.actionPanel li a:hover {
    padding: 5px;
    background: #eee;
    text-decoration: none;
}
.metadataLine, .description{
    padding: 5px 0;
}

.metadataLine,.unknownType {
    font-size: 90%;
    list-style:none;
    margin:0;
}
.metadataLine .data{
    padding-right:5px;
    }

.metadataLine em, .unknownType em{
     font-style:normal;
     font-weight:normal;
 }   
    
.metadataLine  li{
    display:inline;
}
.description{
    margin-top:5px;
    border-top:1px solid #ccc;
}
ul.moreInfo {
    list-style:none;
    position:absolute;
    top:15px;
    right:10px;
    text-align: right;
    font-weight:bold;
}
.moreInfo a, .moreInfo a:visited{
    text-decoration:none;
    }
.moreInfo a:hover{
    }
.moreInfo a .size{
}
ul.attachList li {
    background: transparent url(/library/image/sakai/attachments.gif) center left no-repeat;
    padding-left: 20px;
    margin-left:10px;
}

/*file and item type listings*/
img.itemIcon{
   /*
 float:left;
*/
    vertical-align:bottom;
    padding-top:3px;
    margin-right:5px;
}
a.itemLink {
    /*
    display: block;
    padding: 3px;
    float:left;
*/
}

.itemLabel{
    /*
    display:block;
    color:#555;
    float:left;
*/
    padding:5px 5px 0 0px;
}
.itemLabel:before{
    content:" - ";
}
.itemCollection {
    margin:0;
    padding:0;
}
.itemCollection .itemLabel{
    padding:5px 0 0 0;
}

.itemCollection .span8{
    margin-left:0;
}
.itemCollection .row-fluid .tab{

}

.itemCollection .newRow > div{
    -webkit-border-bottom-right-radius: 10px;
    -webkit-border-bottom-left-radius: 10px;
    -moz-border-radius-bottomright: 10px;
    -moz-border-radius-bottomleft: 10px;
    border-bottom-right-radius: 10px;
    border-bottom-left-radius: 10px;
    padding: 10px;
    margin-bottom: 5px;
    font-size: 100%;
    position:relative;
    border:1px solid #ddd;
    margin-top:-5px;
    background:#fff;
    margin-left: 14.8936%;
}

/*file exensions to match*/
.doc, .rtf, .docx, .docm, .dotx, .dotm {
    background: url(/library/image/sakai/word.gif) center left no-repeat !important
}

.ppt, .pps, .pptx, .pptm, .ppsx, .potx, .potm, .ppam {
    background: url(/library/image/sakai/ppt.gif) center left no-repeat !important
}

.xls, .xlsx, .csv, .xlsx, .xlsm, .xltx, .xltm, .xlsb, .xlam {
    background: url(/library/image/sakai/excel.gif) center left no-repeat !important
}

.mdb {
    background: url(/library/image/sakai/access.gif) center left no-repeat !important
}

.gif, .jpg, .jpeg, .png {
    background: url(/library/image/sakai/image.gif) center left no-repeat !important
}

.html, .htm {
    background: url(/library/image/sakai/html.gif) center left no-repeat !important
}

.txt, .java {
    background: url(/library/image/sakai/text.gif) center left no-repeat !important
}

.zip, .tar, .sit, .hqx {
    background: url(/library/image/sakai/compressed.gif) center left no-repeat !important
}

.mov, .mpeg, .avi {
    background: url(/library/image/sakai/movie.gif) center left no-repeat !important
}

.mp3, .wav, .aiff {
    background: url(/library/image/sakai/audio.gif) center left no-repeat !important
}

.pdf {
    background: url(/library/image/sakai/pdf.gif) center left no-repeat !important
}

.ai, .ps, .psd {
    background: url(/library/image/sakai/postscript.gif) center left no-repeat !important
}

.ram, .rm {
    background: url(/library/image/sakai/real.gif) center left no-repeat !important
}

.swf {
    background: url(/library/image/sakai/shockwave.gif) center left no-repeat !important
}
.listHeader {
}
.listHeader td{
    border:2xp solid red  !important;
    vertical-align:middle;
}
.itemCollection{
    border:none !important
}
.itemCollection td, .itemCollection tr{
    padding:5px !important;
}
.itemCollection tr.row1, .itemCollection tr.row1 td,.itemCollection tr.row0, .itemCollection tr.row0 td{
    background-color:#ffe;
}
.itemCollection a{
    text-decoration:none;
}

.itemCollection img.resIcon{
    padding:0 3px 0 0;
}
.itemCollection .results{
    border:none;
}
.itemCollection .resource  td.resourceLink a.itemLink, .itemCollection .resource td.activeCell a.itemLink,  .itemCollection .resource td.tab a.itemLink{
    background-image: none;
    padding:3px;
    display:inline !important;    
}

ul.tabPanel, li{
    border:0; margin:0; padding:0; list-style:none;
}
ul.tabPanel{
    height:29px;
    margin:-bottom:3px;
}
.tabPanel li{
    float:left; margin-right:2px;background:#eee;
    -webkit-border-top-left-radius: 7px;
    -webkit-border-top-right-radius: 7px;
    -moz-border-radius-topleft: 7px;
    -moz-border-radius-topright: 7px;
    border-top-left-radius: 7px;
    border-top-right-radius: 7px;
}

.tabPanel a:link, .tabPanel a:visited{
    background:url(img/tab-round.png) right 60px;
    color:#666 !important;
    display:block;
    font-weight:bold;
    height:30px;
    line-height:30px;
    text-decoration:none;
}
.tabPanel a span{
    background:url(img/tab-round.png) left 60px;
    display:block;
    height:30px;
    margin-right:14px;
    padding-left:14px;
}
.tabPanel a:hover{
    display:block;
    color:#000;
}
.tabPanel a:hover span{
    background:url(img/tab-round.png) left 30px;
    display:block;
}
.nav-tabs li > a{
    text-decoration:none;
}
.nav-tabs .activeTab > a{
    text-decoration:none;
    -moz-border-bottom-colors: none;
    -moz-border-left-colors: none;
    -moz-border-right-colors: none;
    -moz-border-top-colors: none;
    background-color: #FFFFFF;
    border-color: #DDDDDD #DDDDDD transparent;
    border-image: none;
    border-style: solid;
    border-width: 1px;
    color: #555555;
    cursor: default;

}
.panel{

}
/*
wrappers for all panels - receive the focus after a tab click
*/
#newsPanel:focus,#schedPanel:focus{
    outline:none;
}
#messagePanel,#messageError{
    position:absolute;
    top:3px;
    left:30%;
    right:30%;
    width:400px;
    margin:auto;
    padding:5px 10px;
    background:#9cf;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}
#messageError{
  background:#b11;
  color:#fff;
}
#motdTextDiv{
    border:1px solid #FFCC66;
    margin-top:10px;
    padding: 10px;
    background:#ffffee;
}
#motdTextDiv h3{
    margin-top:0;
}
#motdTextDiv .motdText{
    padding: 0;
}

#motdTextDivDismiss{
    position:absolute;
    background:#fff;
    font-weight:bold;
    border:1px solid #FFCC66;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    right:10px;
    padding:3px 6px;
    display:block;
    text-decoration:none;
}
.mainPanel{
    position:relative
}
.getMore{
    padding:10px;
    padding-left: 16.8936%;
    margin:
}

.getMore a{
    text-decoration:none;
}      
.page .listHeader{
    display:none;
}

.itemList {
    margin:0;
    padding:0;
}

.itemList li.row-fluid {

}
.itemList li.row-fluid > div{
    padding:5px;
} 
.itemList div.newRow > div.span12 .results{
    border:2px solid #ACD0F5;
}

